app1/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    selector: app1
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
